# 2026_SE_6

./: .env.example  .gitignore  README.md  docker-compose.yml  event_catalog.md  event_driven_design.md
src/: pyproject.toml
src/lib/: broker.py  events.py  handlers.py  settings.py
