[project]
name = "2026-se-6"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "pika>=1.3",
  "pydantic>=2.12",
  "pydantic-settings>=2.13",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["lib", "bin"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
